<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2020 The Android Open Source Project
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/background_blue">


    <TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:text="@string/add_trip"
    android:textAlignment="center"
    android:textAppearance="?attr/textAppearanceHeadline4"
    android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:hint="@string/trip_steps"
    android:paddingTop="1dp"
    android:paddingBottom="1dp"
    android:background="@drawable/rounded_corner_view"
    android:layout_marginBottom="20dp">

    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/add_trip_steps"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_view" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:hint="@string/trip_location"
    android:paddingTop="1dp"
    android:paddingBottom="1dp"
    android:background="@drawable/rounded_corner_view"
    android:layout_marginBottom="20dp"
    >

    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/add_trip_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:background="@drawable/rounded_corner_view"
    />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:hint="@string/trip_date"
    android:paddingTop="1dp"
    android:paddingBottom="1dp"
    android:background="@drawable/rounded_corner_view"
    android:layout_marginBottom="20dp">

    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/add_trip_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_view"
    />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
    android:id="@+id/done_button"
    style="@style/Widget.MaterialComponents.Button.Icon"
    android:layout_width="wrap_content"
    android:backgroundTint="@color/button_yellow"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/done_button"
    android:textColor="@color/white"/>
    </LinearLayout>